--- a/app/assets/stylesheets/pages/_services_index.scss
+++ b/app/assets/stylesheets/pages/_services_index.scss
@@ -1,21 +1,22 @@
 
 .services-queries {
-  margin-bottom: 2em;
   margin-top: 2em;
+  display: flex;
+  flex-direction: column;
 }
 
 .services-query-form {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 2em;
-  height: 70px;
 }
 
 .query-form {
   width: 60%;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+  height: 11em;
 }
 
 .filter-buttons-container {
@@ -115,6 +116,23 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.noUi-tooltip {
+  border-radius: 4px;
+  height: 30px;
+  font-size: 0.8em;
+  font-weight: bold;
+}
+
+.noUi-handle {
+  border-radius: 50% !important;
+  width: 30px !important;
+  height: 30px !important;
+}
+
+.noUi-connect {
+  background: #32AE8B;
 }
 
 
