--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -6,11 +6,14 @@
                 params[:query],
                 class: "form-control",
                 placeholder: "Search a type of service, a name, an address... ",
-                style: "margin-bottom: 1em; background-color: white;"
+                style: "background-color: white;"
             %>
+          <p class="text-secondary mb-0">Price range</p>
+          <div id="slider" data-controller="slider" style="align-self: center; width: 95%;"></div>
           <%= submit_tag "Apply filters", name: "", class: "btn btn-primary", style: "width: 200px;" %>
         <% end %>
     </div>
+    <div class="d-none" id="maxPrice"><%= @max_price %></div>
     <hr>
     <div class="filter-buttons-container">
       <div class="filter-button">
@@ -58,6 +61,7 @@
     </div>
     <hr>
   </div>
+  <p class="text-secondary"><%= @services.count %> Services found.</p>
   <div class="services-content-container">
     <%= render "services", services: @services, markers: @markers %>
   </div>
